--- a/css/main.css
+++ b/css/main.css
@@ -1,95 +1,92 @@
-.name input{
+/* body font-style */
+body {
+    font-family: ff-clan-web-pro, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+/* stles for logo */
+
+.logo {
     text-align: center;
-    width: 200px;
-    padding: 10px 10px;
-}
-body{
-    text-align: center;
-    background-color: #f8f8f9;
-}
-form{
-    text-align: center;
-}
-button{
-    color: #FFFFFF;
-    background: #11939a;
-    box-sizing: border-box;
-    width: 400px;
-    padding: 15px 20px;
-    text-align: left;
-    margin-top: 20px;
-}
-label{
-    margin-top: 10px;
-    margin-bottom: 5px;
-    margin-right: 90px;
-    text-align: center;
-    font-size: 14px;
-    display: inline-table;
-}
-select{
-    box-sizing: border-box;
-    padding: 10px 10px;
-}
-input{
-    box-sizing: border-box;
-    padding: 10px 10px;
-    width: 300px;
-}
-.promo{
-    display: block;
-    color: #11939a;
-    margin-top: 30px;
-    margin-right: 260px;
-}
-p{
-    font-size: 13px;
-    display: block;
-    text-align: inherit;
-    margin: 20px;
-}
-.logo{
+    padding-top: 35px;
+    margin-right: auto;
+    margin-left: auto;
     background: black;
-    text-align: center;
+    height: 60px;
     width: 100px;
     color: white;
-    height: 70px;
-    padding: 20px;
-    border: 3px solid;
-    margin-left: 600px;
-    display: block;
+    font-size: 23px;
+    margin-top: 20px;
+    font-family: Arial, serif;
 }
-.uber{
+/* stles for first heading */
+.h1 {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    font-size: 25px;
+    padding-top: 30px;
 }
-.container{
+/* stles for second heading */
+h3 {
     text-align: center;
-    width: 75%;
-    height: 180px;
-    position: inherit;
+    text-emphasis: none;
 }
-.contact input{
+/* styles for main form */
+
+
+/* inputs for the name s */
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+}
+.input-fieldss {
+    margin-bottom: 1%;
+    padding-bottom: 25px;
+    padding-left: 40px;
+}
+.input-fields {
+    margin-bottom: 1%;
+    margin-left: 33%;
+    padding-bottom: 25px;
+    padding-left: 40px;
     width: 30%;
 }
-h1{
+.labels {
+    margin-bottom: 1%;
+    margin-left: 33%;
+    
+
+}
+/* links stles */
+.links {
+    text-decoration: none;
     text-align: center;
-    font-size: 30px;
-    display: block;
-    font-weight: 350;
+    margin-left: 33%;
+    
 }
-h2{
-    text-align: center;
-    display: block;
-    font-size: 20px;
-    font-weight: 300;
+
+/* button for signup */
+.btn {
+    width: 33%;
+    height: 45px;
+    font-size: medium;
+    text-align: left;
+    background-color: #11939a;
+    color: white;
+    border-style: none;
+    margin-left: 33%;
+    
+
 }
-.code{
-    width: 75px;
+p {
+    margin-left: 33%;
+
+    font-size: 14px;
 }
-.number input{
-    padding: 10px 10px;
-    width: 330px;
-    box-sizing: border-box;
-    text-align: center;
-}
+
+/* Use a media query to add a break point at 800px: */
+@media screen and (max-width:800px) {
+    .labels, .input-fields {
+      width:100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+  }
